<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mainScrollView1"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/simplenavy2">

    <LinearLayout
        android:id="@+id/mainLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:focusable="true"
        android:focusableInTouchMode="true"
        tools:context=".ActMain" >

        <TextView
            android:id="@+id/txtvMain"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/maindescription"
            android:textColor="#ffffff"
            android:textSize="13sp" >

        </TextView>
        
        <Button
            android:id="@+id/btnScan"
            android:layout_width="160dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/action_scan"
            android:textColor="#ffffff"
            android:textSize="14sp"
            android:textStyle="bold" />
        
        <Button
            android:id="@+id/btnClose"
            android:layout_width="160dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/action_exit"
            android:textColor="#ffffff"
            android:textSize="14sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/etxtScanInput"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:ems="13"
            android:inputType="textMultiLine"
            android:singleLine="true"
            android:maxLines="1"
            android:textColor="#ffffff"
            android:background="@null" >

            <requestFocus />
        </EditText>

        </LinearLayout>

</ScrollView>